Documents/Work Projects/Triple_App_Deployment/app-two/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-two-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-two
  template:
    metadata:
      labels:
        app: app-two
    spec:
      containers:
      - name: app-two
        image: nginxdemos/hello:plain-text # Example image
        ports:
        - containerPort: 80
