Documents/Work Projects/Triple_App_Deployment/app-two/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /app-two
        pathType: Prefix
        backend:
          service:
            name: app-two-service
            port:
              number: 80
